--- a/projetopetshop/estilo.css
+++ b/projetopetshop/estilo.css
@@ -12,7 +12,12 @@ color: #C0262C;
 
 
 h2{
-font-size: 2.5em; /* 40/16=2.5 */;
+font-size: 1.75em; /* 40/16=2.5 */;
+background: #C0262C url(multimidia/back-bolinha.gif) repeat top center;
+color: #fff;
+letter-spacing: .1em;
+padding: 7px;
+width: 316px;
 
 }
 
@@ -39,3 +44,138 @@ hr{
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#produtos table {
+    width: 600px;
+    margin: 50px auto 30px;
+    text-align: center;
+    border-collapse: collapse;
+}
+#produtos th, #produtos td {
+    border: #999 solid 1px;
+    padding: 5px;
+}
+table {
+    border-collapse: collapse;
+}
+tr {
+    border-top: solid 3px #777;
+    border-bottom: solid 3px #777;
+}
+th, td {
+    padding: 7px;
+}
+#produtos caption {
+    background-color: #999;
+    color: #fff;
+    padding: 15px 0;
+    font-size: 1.5em;
+}
+#produtos td[colspan] {
+    font-style: italic;
+    font-weight: bold;
+    color: #999;
+}
+#produtos tr:hover {
+    background-color: #FEFF76;
+}
+
+  form{
+      background-color: #999;
+      margin: 30px 0;
+      padding: 20px;
+      border-radius: 0 15px;
+  }
+  input[type="submit"]{ /*selecionando o input submit "botao"*/
+      background-color: #C0262C;
+      background: linear-gradient(to bottom, #6b1516 0%,#c0262c 30%,#c0262c 70%,#6b1516 100%);    /*background direcionado de cima pra baixo*/
+      border: none;
+      border-radius: 30px;
+      font-size: 1.2em;
+      color: #fff;
+      padding: 10px 30px;
+      margin: 20px 0;
+      text-shadow: 2px 2px 5px #000;  /*sombra do texto*/
+      cursor: pointer;
+  }
+
+  label{
+    display: block;
+    margin-top: 7px;
+    float: left;
+    width: 60px;
+  }
+  input#nome, input#email{
+      background-color: transparent;  /*background transparente*/
+      border: none;
+      border-bottom: #000 solid 1px;
+      font-size: 1.2em;
+      color: #fff;
+      width: 800px;
+  }
+ 
+  /*trabalhando com estilos em outros navegadores para garantir o mesmo estilo em todos*/
+  ::-webkit-input-placeholder{    /*  Chrome/Safari/Opera   */
+      color: #ddd;
+      font-style: italic;
+      font-size: .8em;
+  }
+ 
+  ::-moz-placeholder{     /*  Firefox  */
+    color: #ddd;
+    font-style: italic;
+    font-size: .8em;
+}
+
+:-ms-input-placeholder{
+    color: #ddd;
+    font-style: italic;
+    font-size: .8em;
+}
+
+
+    #banhoEtosa fieldset{
+        background-color: #fff;
+        border: none;
+        border-radius: 0 15px;
+        margin-bottom: 20px;
+    }
+
+    #banhoEtosa fieldset legend{
+        background-color: #C0262C;
+        color: #fff;
+        font-weight: bold;
+        letter-spacing: .05em;
+        padding: 10px;
+        margin-left: -13px;
+
+
+
+
+    }
+
+    #banhoEtosa fieldset label{
+        display: block;
+        margin-top: 7px;
+        float: left;
+        width: 115px;
+
+    }
+
+    #banhoEtosa fieldset input[type="text"],
+    #banhoEtosa fieldset input[type="email"]{
+        border: none;
+        border-bottom: #000 solid 1px;
+        font-size: 1.2em;
+        color: #000;
+        width: 770;
+    }
+
+    #banhoEtosa fieldset textarea{
+        width: 770px;
+        height: 100px;
+        font-size: 1.2em;
+        border: #000 solid 1px;
+    }
+
+
