--- a/projetopetshop/estilo.css
+++ b/projetopetshop/estilo.css
@@ -349,3 +349,15 @@ th, td {
     -o-transform: rotate(30deg);
     transform: rotate(30deg);
 }
+
+footer {
+    clear: both;
+    border-top: 7px solid #999;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
+footer p{
+    margin: ;
+}
